Resolving issue with filters taking the outstanding case board too small. Also resolved issue where filter logic wasn't quite right

--- a/src/app/modules/emergency-register/components/tab-bar/tab-bar.component.scss
+++ b/src/app/modules/emergency-register/components/tab-bar/tab-bar.component.scss
@@ -32,3 +32,7 @@
 :host > .mat-tab-group:first-child ::ng-deep .mat-tab-label:last-child{
     margin-left: auto;
 }
+
+::ng-deep .mat-tab-body {
+    min-height: 695px;
+}
